# dreamhouse_db

./: .editorconfig  README.md  app.py  dreamhouse_sql.sql  pyproject.toml
DR-HA-Clientes/: clientes.sql
DR-HA-Directores/: directores.sql
DR-HA-Propietarios/: propietarios.sql
DR-HA-Reportes/: reportes.sql
DR-HA-Supervisores/: supervisores.sql
dreamhouse_db/: database.py
dreamhouse_db/data/: __init__.py  clients.py
dreamhouse_db/database/: create.py  insert.py
dreamhouse_db/util/: constants.py
